    cursor.

- Hard wrap would wrap one word too early when inserting beyond the wrap
  margin.

- Fixed exception when tab size was set to 0.

- Fixed caret being offset too far to the right when dropping text in
  the text area, due to the gutter's width not being taken into account
  (Wiktor Adamski).

- Dismissing the buffer switcher popup now sends focus back to the text
  area.

}}}

}}}
{{{ Version 4.2pre8

Thanks to David Moss, Justin Dieters, Kris Kopicki, Ollie Rutherfurd,
Philipp Janda, and Scott Allen for contributing to this release.

{{{ Miscellaneous

- New splash screen (Kris Kopicki).

- Clicking "Reload" in the "Files Changed on Disk" dialog box now
  selects the next buffer. This improves usability.

- Added Alt-key mnemonics to "Files Changed" dialog box
  (Ollie Rutherfurd).

- Alternative caret movement shortcuts (A+a,i,j,k,l,q,x,z) now work
  together with Shift to extend the selection.

- "Using jEdit" section of the jEdit user's guide is now mostly up to
  date for jEdit 4.2.

- Fixed various mistakes in the documentation (Justin Dieters).

}}}
{{{ Scripting

- BeanShell 2.0b1 imported. It has the following improvements over the
  previously-bundled release (1.3.1):

  - Full support for scripted classes that behave exactly the same as
    compiled classes.

  - Java 1.5-style static imports (this does not require Java 1.5). For
    example:

    static import java.lang.Math.*;
    sqrt(4.0);

  - Instance object imports (mix-ins) with the importObject() command.
    For example:

    importObject( new HashMap() );
    put("foo", "bar");
    print( get("foo") ); // prints "bar"

- The ASM bytecode generation library is now bundled with jEdit since it
  is required by BeanShell 2.0.

}}}
{{{ Syntax Highlighting

- Lua syntax highlighting (Philipp Janda)

- SMI-MIB syntax highlighting (Scott Allen).

- Updated Lisp syntax highlighting (Ollie Rutherfurd).

- Added Swig and PSP syntax highlighting (Ollie Rutherfurd).
