@@ -3,7 +3,7 @@
  * :tabSize=8:indentSize=8:noTabs=false:
  * :folding=explicit:collapseFolds=1:
  *
- * Copyright (C) 2000, 2003 Slava Pestov
+ * Copyright (C) 2000, 2004 Slava Pestov
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License
@@ -992,8 +992,7 @@ public class PanelWindowContainer implements DockableWindowContainer
 			{
 				if(canDrag)
 				{
-					wm.resizePos = dimension;
-					wm.setResizePos(PanelWindowContainer.this);
+					wm.setResizePos(dimension,PanelWindowContainer.this);
 					dragStart = evt.getPoint();
 				}
 			} //}}}
@@ -1074,26 +1073,31 @@ public class PanelWindowContainer implements DockableWindowContainer
 				//{{{ Top...
 				if(position.equals(DockableWindowManager.TOP))
 				{
-					wm.resizePos = evt.getY() - dragStart.y + dimension;
-					wm.setResizePos(PanelWindowContainer.this);
+					wm.setResizePos(
+						evt.getY() - dragStart.y
+						+ dimension,
+						PanelWindowContainer.this);
 				} //}}}
 				//{{{ Left...
 				else if(position.equals(DockableWindowManager.LEFT))
 				{
-					wm.resizePos = evt.getX() - dragStart.x + dimension;
-					wm.setResizePos(PanelWindowContainer.this);
+					wm.setResizePos(evt.getX() - dragStart.x
+						+ dimension,
+						PanelWindowContainer.this);
 				} //}}}
 				//{{{ Bottom...
 				else if(position.equals(DockableWindowManager.BOTTOM))
 				{
-					wm.resizePos = (dimension - evt.getY() + dragStart.y);
-					wm.setResizePos(PanelWindowContainer.this);
+					wm.setResizePos(dimension - evt.getY()
+						+ dragStart.y,
+						PanelWindowContainer.this);
 				} //}}}
 				//{{{ Right...
 				else if(position.equals(DockableWindowManager.RIGHT))
 				{
-					wm.resizePos = (dimension - evt.getX() + dragStart.x);
-					wm.setResizePos(PanelWindowContainer.this);
+					wm.setResizePos(dimension - evt.getX()
+						+ dragStart.x,
+						PanelWindowContainer.this);
 				} //}}}
 			} //}}}
 
